--- a/index.html
+++ b/index.html
@@ -13,39 +13,60 @@
 
 <body>
     <header>
+
         <h2>pt-br/<span>En</span></h2>
 
         <div id="menuToggle">
 
-            <input type="checkbox" />
+            <input type="checkbox" id="ckeckboxMenuMobile" />
 
             <span></span>
             <span></span>
             <span></span>
 
-            <ul id="menu">
+            <ul id="menu" class="menu-desktop">
                 <a href="#">Main</a>
                 <a href="#">Shop</a>
                 <a href="#">Blog</a>
                 <a href="#">News</a>
                 <a href="#">Contacts</a>
             </ul>
-
         </div>
+
+        <div class="wrapper-desc-header">
+            <svg width="18" height="17" viewBox="0 0 18 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path
+                    d="M5.79102 16.7354L8.74512 11.6328L11.6748 16.7354L14.1406 15.3193L11.2109 10.2168H17.0947V7.38477H11.2109L14.1406 2.28223L11.6992 0.866211L8.76953 5.96875L5.79102 0.866211L3.3252 2.28223L6.25488 7.38477H0.395508V10.2168H6.25488L3.3252 15.3193L5.79102 16.7354Z"
+                    fill="#0E0E0E" />
+            </svg>
+            <p class="descrip-header">
+                Street art is visual art created
+                in public locations for public
+                visibility
+            </p>
+        </div>
+
     </header>
     <main>
         <div id="title">
-            <h1 class="title-art">
-                ONLINE <br>
+            <h1 class="title-art title-desktop">ONLINE
+                <img src="assets/desing/theHall.svg" alt="" id="img1" width="280" height="130">
+                <img src="assets/desing/img-quadro.svg" alt="" id="img2" width="380" height="236">
+            </h1><br>
+            <h1 class="title-art title-desktop ">
+                <img src="assets/desing/img-predio.svg" alt="" id="img3" width="380" height="206">
                 MUSEUM <br>
-                OF STREET <br>
-                ART
-            </h1>
-            <img src="assets/desing/img01.svg" alt="people" id="img-title">
+                OF STREET ART
+                 <img src="assets/desing/smile.svg" alt="" id="img4">
+            </h1><br>
+
         </div>
-        <figure>
-            <img src="assets/desing/Image02.svg" alt="img02">
-        </figure>
+
+        <div id="container-img">
+            <img src="assets/desing/Image02.svg" alt="img"  >
+            <img src="assets/desing/Rectangle 1186.svg" alt="Rectangle" >
+        </div>
+
         <div id="about">
             <h1 class="title-art">
                 <i>ABOUT </i> → <br>
@@ -238,6 +259,8 @@
         <p class="paragrapho footer-p">© 2022 Online Museum of Street Art</p>
         <p class="paragrapho footer-p">Yakimansky lane, 4c1, Moscow, 119049</p>
     </footer>
+
+    <script src="src/main.js"></script>
 </body>
 
 </html>
